--- a/Resources/config/admin/structure.yuser.yml
+++ b/Resources/config/admin/structure.yuser.yml
@@ -4,7 +4,7 @@ modules:
         title: Users
         type: dictionary
         icon: imoon imoon-user
-        entity: Youshido\SecurityUserBundle\Entity\User
+        entity: AppBundle\Entity\User
         columns: 
             id:
                 type: integer
