--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,10 @@
 services:
+
+    security.user_provider:
+        class: Youshido\SecurityUserBundle\Service\UserProvider
+        calls:
+            - [ setContainer, [ @service_container ]]
+
     security.authentication_handler:
         class: Youshido\SecurityUserBundle\Service\AuthenticationHandler
         public: false
