add mailer and activation code logic

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,10 @@
 services:
 
+    security.mailer:
+        class: Youshido\SecurityUserBundle\Service\Mailer
+        calls:
+            - [ setContainer, [ @service_container ]]
+
     security.user_provider:
         class: Youshido\SecurityUserBundle\Service\UserProvider
         calls:
