--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,8 @@
     }
   ],
   "require": {
-    "php": ">=5.4",
-    "symfony/framework-bundle": "~2.3",
-    "doctrine/doctrine-bundle": "~1.3",
-    "symfony/form": "~2.3"
+    "php": ">=5.5",
+    "symfony/framework-bundle": "~2.3|~3.0"
   },
   "autoload": {
     "psr-4": { "Youshido\\SecurityUserBundle\\": "" }
